fix(ci): move RUSTC_WRAPPER from Dockerfile to workflow
RUSTC_WRAPPER in Dockerfile caused sccache to start before
GHA cache authentication was ready, failing with 400 error.

Now RUSTC_WRAPPER is set in each docker run command after
sccache-action has configured the cache credentials.

--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -65,6 +65,7 @@ jobs:
             -e CARGO_TERM_COLOR=always \
             -e CARGO_INCREMENTAL=0 \
             -e RUSTFLAGS="--cfg tokio_unstable" \
+            -e RUSTC_WRAPPER=/usr/local/cargo/bin/sccache \
             -e SCCACHE_GHA_ENABLED=true \
             -e ACTIONS_CACHE_URL \
             -e ACTIONS_RUNTIME_TOKEN \
@@ -116,6 +117,7 @@ jobs:
             -e CARGO_TERM_COLOR=always \
             -e CARGO_INCREMENTAL=0 \
             -e RUSTFLAGS="--cfg tokio_unstable" \
+            -e RUSTC_WRAPPER=/usr/local/cargo/bin/sccache \
             -e SCCACHE_GHA_ENABLED=true \
             -e ACTIONS_CACHE_URL \
             -e ACTIONS_RUNTIME_TOKEN \
@@ -193,6 +195,7 @@ jobs:
             -e CARGO_TERM_COLOR=always \
             -e CARGO_INCREMENTAL=0 \
             -e RUSTFLAGS="--cfg tokio_unstable" \
+            -e RUSTC_WRAPPER=/usr/local/cargo/bin/sccache \
             -e SCCACHE_GHA_ENABLED=true \
             -e ACTIONS_CACHE_URL \
             -e ACTIONS_RUNTIME_TOKEN \
@@ -212,6 +215,7 @@ jobs:
             -e CARGO_TERM_COLOR=always \
             -e CARGO_INCREMENTAL=0 \
             -e RUSTFLAGS="--cfg tokio_unstable" \
+            -e RUSTC_WRAPPER=/usr/local/cargo/bin/sccache \
             -e SCCACHE_GHA_ENABLED=true \
             -e ACTIONS_CACHE_URL \
             -e ACTIONS_RUNTIME_TOKEN \
