--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -136,10 +136,10 @@ jobs:
             bash -c "cp -rn /opt/target-cache target 2>/dev/null || true; cargo build --bin gravity_node --profile quick-release && cargo build --bin gravity_cli --profile quick-release"
 
   # ==========================================================================
-  # Unit Tests - Parallel matrix jobs with Docker container
+  # Build Tests - compile all tests once (uses Docker container)
   # ==========================================================================
-  test:
-    name: "Tests (${{ matrix.group }})"
+  build-tests:
+    name: Build Tests
     runs-on: ubuntu-latest
     env:
       CI_IMAGE: ghcr.io/richard1048576/gravity-sdk/rust-ci:latest
@@ -147,6 +147,57 @@ jobs:
       github.event_name == 'push' ||
       github.event_name == 'workflow_dispatch' ||
       contains(github.event.pull_request.labels.*.name, 'CICD:run-tests')
+    steps:
+      - name: Free disk space
+        run: |
+          echo "=== Initial disk space ==="
+          df -h
+          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQL
+          sudo rm -rf /usr/local/share/boost /usr/share/swift /usr/local/graalvm
+          sudo rm -rf /usr/local/.ghcup/ /usr/local/share/powershell /usr/local/share/chromium
+          sudo rm -rf /opt/hostedtoolcache/go /opt/hostedtoolcache/node
+          echo "=== After cleanup ==="
+          df -h
+
+      - uses: actions/checkout@v4
+
+      - name: Pull CI image
+        run: docker pull $CI_IMAGE
+
+      - name: Build all tests
+        run: |
+          docker run --rm \
+            -v "${{ github.workspace }}:/workspace" \
+            -w /workspace \
+            -e CARGO_TERM_COLOR=always \
+            -e CARGO_INCREMENTAL=0 \
+            -e RUSTFLAGS="--cfg tokio_unstable" \
+            $CI_IMAGE \
+            bash -c "cp -rn /opt/target-cache target 2>/dev/null || true; cargo build --tests --workspace --exclude smoke-test --profile ci"
+
+      - name: Clean incremental artifacts
+        run: |
+          rm -rf target/ci/incremental || true
+          rm -rf target/ci/.fingerprint || true
+          du -sh target/ci
+
+      - name: Upload test artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-target
+          path: target/ci
+          retention-days: 1
+          compression-level: 1
+
+  # ==========================================================================
+  # Unit Tests - Parallel matrix jobs using pre-built artifacts
+  # ==========================================================================
+  test:
+    name: "Tests (${{ matrix.group }})"
+    runs-on: ubuntu-latest
+    needs: build-tests
+    env:
+      CI_IMAGE: ghcr.io/richard1048576/gravity-sdk/rust-ci:latest
     strategy:
       fail-fast: false
       matrix:
@@ -192,24 +243,14 @@ jobs:
 
       - uses: actions/checkout@v4
 
+      - name: Download test artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: test-target
+          path: target/ci
+
       - name: Pull CI image
         run: docker pull $CI_IMAGE
-
-      - name: Build tests
-        run: |
-          docker run --rm \
-            -v "${{ github.workspace }}:/workspace" \
-            -w /workspace \
-            -e CARGO_TERM_COLOR=always \
-            -e CARGO_INCREMENTAL=0 \
-            -e RUSTFLAGS="--cfg tokio_unstable" \
-            $CI_IMAGE \
-            bash -c "cp -rn /opt/target-cache target 2>/dev/null || true; cargo build --tests --workspace --exclude smoke-test --profile ci"
-
-      - name: Clean incremental artifacts
-        run: |
-          rm -rf target/ci/incremental || true
-          df -h
 
       - name: Run tests
         run: |
