fix(ci): remove invalid -j flag from nextest archive, use CARGO_BUILD_JOBS env only

--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -174,7 +174,7 @@ jobs:
             -e CARGO_BUILD_JOBS=4 \
             -e RUSTFLAGS="--cfg tokio_unstable" \
             $CI_IMAGE \
-            bash -c "cp -rn /opt/target-cache target 2>/dev/null || true; cargo nextest archive --workspace --exclude smoke-test --profile ci --archive-file nextest-archive.tar.zst -j 4"
+            bash -c "cp -rn /opt/target-cache target 2>/dev/null || true; cargo nextest archive --workspace --exclude smoke-test --profile ci --archive-file nextest-archive.tar.zst"
 
       - name: Fix permissions
         run: sudo chown $(id -u):$(id -g) nextest-archive.tar.zst && ls -lh nextest-archive.tar.zst
