--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -200,15 +200,15 @@ jobs:
       matrix:
         include:
           - group: core
-            filter: "-E 'package(api) | package(gravity-primitives) | package(gravity-storage) | package(api-types)'"
+            filter: "-E 'package(api) | package(gravity-sdk) | package(build-info)'"
           - group: consensus-core
-            filter: "-E 'package(block-buffer-manager) | package(txn_metrics) | package(aptos-consensus-types) | package(safety-rules)' --run-ignored default"
+            filter: "-E 'package(block-buffer-manager) | package(txn_metrics) | package(aptos-consensus-types) | package(aptos-safety-rules)' --run-ignored default"
           - group: consensus-dag
             filter: "-E 'package(aptos-consensus) & test(/dag::tests::/)'"
           - group: consensus-network
             filter: "-E 'package(aptos-mempool) | (package(aptos-consensus) & test(/network_tests::/))'"
-          - group: gaptos
-            filter: "-E 'package(gaptos) | package(aptos-executor)'"
+          - group: executor
+            filter: "-E 'package(aptos-executor) | package(aptos-executor-types)'"
           - group: binaries
             filter: "-E 'package(gravity_node) | package(gravity_cli)'"
     steps:
